# Narracast

./: .gitignore  CHANGELOG.md  LICENSE  NARRACAST_ROADMAP.md  README.md  app.py  pyproject.toml  requirements.txt
docs/: RELEASE_BUILDS.md  USER_GUIDE.md
narracast/: __init__.py  __main__.py  audio_generation.py  audio_polish.py  benchmark.py  chapter_splitter.py  chunk_stream.py  m4b_export.py  metadata.py  mp3_folder_import.py  output_files.py  paths.py  platform.py  playback.py  presets.py  projects.py  queue_manager.py  settings.py  text_cleanup.py  text_splitter.py  timing_analysis.py  tts_process.py  tts_worker.py  voices.py  wifi_server.py
narracast/ui/: __init__.py  benchmark_dialog.py  icons.py  m4b_export_dialog.py  main_window.py  sidebar.py  signals.py  theme.py  timing_dialog.py  widgets.py
narracast/ui/pages/: __init__.py  generate_page.py  help_page.py  history_page.py  projects_page.py  queue_page.py  reading_page.py  transfer_page.py  voice_page.py
scripts/: Narracast.app-launcher.sh  build_bundle.py
tests/: test_audio_polish.py  test_backend_helpers.py  test_chapter_splitter.py  test_chunk_stream.py  test_generation_metadata.py  test_m4b_export.py  test_mp3_folder_import.py  test_platform.py  test_playback_reader.py  test_projects.py  test_projects_page.py  test_queue_manager.py  test_settings.py  test_text_cleanup.py  test_timing_analysis.py  test_tts_process.py  test_ui_layout.py  test_wifi_server.py
